--- a/study/templates/study/location2.html
+++ b/study/templates/study/location2.html
@@ -23,7 +23,7 @@
 
     // 指定图表的配置项和数据
     var data = [
-        [20, 26, 321773631, 'United States', 1900],
+        [39, 22.4, 1, '所在位置', 0],
     ];
 
     var option = {
@@ -50,6 +50,7 @@
                     type: 'dashed'
                 }
             },
+            inverse: true,
             min: 0,
             max: 34.4,
             show: false,
@@ -90,21 +91,24 @@
 
     setInterval(function () {
 
-        $.getJSON("{% url 'study:getrandom' %}", function (ret) {
+        $.getJSON("{% url 'study:getcord' %}", function (ret) {
             //返回值 ret 在这里是一个列表
-            var datadetail = [];
-            datadetail[0] = ret[0]* 82.29
-            datadetail[1] = ret[1]* 34.4
-            datadetail.push('position');
-            datadetail.push(1900);
-            data = [];
-            data.push(datadetail);
-            myChart.setOption({
-                series: [{
-                    name: 'location',
-                    data: data
-                }]
-            });
+            console.log(ret)
+            if (ret[0] != -1 && ret[1] != -1) {
+                var datadetail = [];
+                datadetail[0] = ret[0]
+                datadetail[1] = ret[1]
+                datadetail.push('position');
+                datadetail.push('所在位置');
+                data = [];
+                data.push(datadetail);
+                myChart.setOption({
+                    series: [{
+                        name: 'location',
+                        data: data
+                    }]
+                });
+            }
         });
 
     }, 1000);
